<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/namazTimeCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#000000" >
    </LinearLayout>

    <TextView
        android:id="@+id/namazTimeCurrentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/namazTimeCurrentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp" >

        <TextView
            android:id="@+id/namazTimeDayOfWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/namazTimeFajrBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namazTimeFajr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/fajr"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/namazTimeFajrTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/namazTimeSunriseBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namazTimeSunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/sunrise"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/namazTimeSunriseTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/namazTimeZuhrBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namazTimeZuhr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/zuhr"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/namazTimeZuhrTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/namazTimeAsrBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namazTimeAsr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/asr"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/namazTimeAsrTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/namazTimeMaghribBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namazTimeMaghrib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/maghrib"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/namazTimeMaghribTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/namazTimeIshaBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namazTimeIsha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/isha"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/namazTimeIshaTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>